--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ny"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 [lib]
@@ -10,7 +10,9 @@ path = "src/common/lib.rs"
 [dependencies]
 clap = { version = "4.2.4", features = ["derive"] }
 colored = "2.0.0"
-eyre = { version = "0.6.8", features = ["auto-install"], default-features = false }
+eyre = { version = "0.6.8", features = [
+  "auto-install",
+], default-features = false }
 lazy_static = "1.4.0"
 mockall = { version = "0.11.4", features = ["nightly"] }
 serde_json = "1.0.96"
