--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,10 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: brew install coreutils
 
+      - name: Install openssl deps for Linux
+        if: matrix.os == 'ubuntu-latest'
+        run: apt-get install pkg-config libssl-dev
+
       # Cache files between builds
       - name: Setup | Cache Cargo
         uses: actions/cache@v2.1.7
