--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ eyre = { version = "0.6.8", features = [
 ], default-features = false }
 lazy_static = "1.4.0"
 mockall = { version = "0.11.4", features = ["nightly"] }
+openssl = { version = "0.10", features = ["vendored"] }
 reqwest = { versoin = "0.11.22", features = ["blocking"] }
 serde_json = "1.0.96"
