--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -19,5 +19,6 @@ jobs:
         uses: changesets/action@v1
         with:
           version: bun version
+          publish: bun publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
