--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Create Release Pull Request or Start release (tag)
         uses: changesets/action@v1
         with:
-          version: bun version
-          publish: bun publish
+          version: bun run version
+          publish: bun run publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
