--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -21,4 +21,4 @@ jobs:
           version: bun run version
           publish: bun run publish
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_SECRET_CHANGESET }}
