--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,20 +45,17 @@ jobs:
 
       # Cache files between builds
       - name: Setup | Cache Cargo
-        uses: actions/cache@v2.1.7
+        uses: actions/cache@v4
         with:
           path: |
             ~/.cargo/registry
             ~/.cargo/git
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Setup | Rust
-        uses: actions-rs/toolchain@v1
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: nightly
-          profile: minimal
           target: ${{ matrix.target }}
-          override: true
 
       - name: Build release
         uses: actions-rs/cargo@v1
@@ -76,7 +73,7 @@ jobs:
 
       - name: Upload artifacts archive
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: ny_${{ matrix.release_name }}.tar.gz
           path: ny_${{ matrix.target }}.tar.gz
