--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,7 @@ eyre = { version = "0.6.8", features = [
 lazy_static = "1.4.0"
 mockall = { version = "0.11.4", features = ["nightly"] }
 openssl = { version = "0.10", features = ["vendored"] }
+owo-colors = "4.2.2"
 reqwest = { version = "0.11.22", features = ["blocking"] }
 serde_json = "1.0.96"
+tempdir = "0.3.7"
