--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,13 @@ jobs:
           command: check
           args: --locked
 
+      # install all missing package managers
+      - uses: actions/setup-node@v4
+      - uses: oven-sh/setup-bun@v1
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9.4.0
+
       - uses: actions-rs/cargo@v1
         with:
           command: test
